--- a/Star Cars/Base.lproj/Main.storyboard
+++ b/Star Cars/Base.lproj/Main.storyboard
@@ -57,6 +57,7 @@
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock" translatesAutoresizingMaskIntoConstraints="NO" id="zeg-ji-hdE">
                                                 <rect key="frame" x="20" y="137" width="30" height="30"/>
+                                                <color key="tintColor" red="0.58039215690000001" green="0.066666666669999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Nju-i2-ack"/>
                                                     <constraint firstAttribute="width" constant="30" id="RS8-e2-9Vj"/>
@@ -850,7 +851,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="589-5899778_history-icon-png-history-icon-transparent-png.png" translatesAutoresizingMaskIntoConstraints="NO" id="z22-he-OsU">
-                                                    <rect key="frame" x="10" y="0.0" width="44" height="44.000000000000227"/>
+                                                    <rect key="frame" x="10" y="0.0" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="ZEJ-5u-lTQ"/>
                                                         <constraint firstAttribute="width" constant="44" id="rAb-kp-Mgy"/>
@@ -881,7 +882,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="about-us-icon-4" translatesAutoresizingMaskIntoConstraints="NO" id="8Rg-BF-Iw3">
-                                                    <rect key="frame" x="10" y="0.0" width="44" height="44.000000000000227"/>
+                                                    <rect key="frame" x="10" y="0.0" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="Chy-NX-Mr5"/>
                                                         <constraint firstAttribute="width" constant="44" id="W6f-3N-3CK"/>
@@ -1605,7 +1606,7 @@
                                             <constraint firstAttribute="height" constant="44" id="i3X-r4-ICZ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FKz-Ga-w4T">
                                         <rect key="frame" x="20" y="155" width="334" height="1"/>
@@ -1634,7 +1635,7 @@
                                             <constraint firstAttribute="height" constant="44" id="zZ1-xN-Yta"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpo-ch-8UD">
                                         <rect key="frame" x="20" y="225" width="334" height="1"/>
